--- a/analysis/preregistration_template.Rmd
+++ b/analysis/preregistration_template.Rmd
@@ -15,23 +15,24 @@ The template is largely structured around 6 "phases" in the process of developin
 
 ## iterative model development and a 'living preregistration'
 
-One of the major challenges in designing a template for modelling is that the process of model development is inherently iterative. Typically, the process of preregistration is completely distinct from and precedes the implementation of the analysis plan laid out in the preregistration. However, translating the preregistration process to a modelling research context is not so clear cut because some decisions are inherently dependent on the outcomes and results of previous decisions and analyses. For example, some items at the later stages of modelling probably can't be answered until the model itself is fully or close to fully developed, especially for more complex process models (e.g. specifying exactly what sensitivity analyses or uncertainty analyses will be conducted). Thus deciding on the inner logic of the template, and what is in and out of scope has been particularly difficult.
+One of the major challenges in designing a template for modelling is that the process of model development is inherently iterative. Typically, the process of preregistration is completely distinct from and precedes the implementation of the analysis plan laid out in the preregistration. However, translating the preregistration process to a modelling research context is not so clear cut because some decisions are inherently dependent on the outcomes and results of previous decisions and analyses. For example, which sensitivity analyses will be conducted will depend on the relationships between variables found during earlier earlier stages in the modelling process. 
 
-One method around this is to accept that the current model of preregistration is not going to work for iterative model development. Again, the more complex the model, the more likely this is to be the case. Consequently I propose a different model of preregistration that I think will work for modeling research contexts. At the moment I'm calling it 'living preregistration' but please suggest another name. Others have termed this 'adaptive preregistration', and this is maybe a better name.
+One method around this is to accept that the current model of preregistration is not going to work for iterative model development. Again, the more complex the model, the more likely this is to be the case. Consequently I propose an 'adaptive preregistration' model  that I think will work for modeling research contexts. 
 
-In this model of preregistration, all questions that can be answered, should be answered before any data analysis or modelling proceeds. For some items, particularly during model evaluation and analysis, perhaps only responses of a general nature can be provided. That is OK. As the modelling proceeds. Further detail can be provided and the next phase of analysis can be preregistered. Where the results of model evaluation and analysis reveal that there are problems with the model, or perhaps assumption violations, plans can be changed, and again the next phase of analysis can be preregistered.
+In this model of preregistration, all questions that can be answered, should be answered before any data analysis or modelling proceeds. For some items, particularly during model evaluation and analysis, perhaps only responses of a general nature can be provided. That is OK. As the modelling proceeds, further detail can be provided and the next phase of analysis can be preregistered. Where the results of model evaluation and analysis reveal that there are problems with the model, or perhaps assumption violations, plans can be changed, and again the next phase of analysis can be preregistered.
 
-A static document for this type of process doesn't really make sense. I propose leveraging the code and project management tools within the GitHub platform as a way of hosting a 'living' or 'adaptive' preregistration. Because GitHub documents are 'time-stamped', the genesis of the preregistration from one version to the next can be traced and tagged with versions. Since the document would exist in the repository with the code itself, any results from analyses that cause the analysis plan to change can be linked and referenced in the updated plan.
+A static document for this type of process doesn't really make sense. I propose leveraging the code and project management tools within the GitHub platform as a way of hosting an 'adaptive' preregistration. Because GitHub documents are 'time-stamped', the genesis of the preregistration from one version to the next can be traced and tagged with versions. Since the document would exist in the repository with the code itself, any results from analyses that cause the analysis plan to change can be linked and referenced in the updated plan.
 
 --------------------------------
 
 # 1. Problem Formulation
+***HF comment: I think this paragraph makes things more rather than less confusing - and I wonder if its necessary given that each point is stepped through below. I would recommend removing it***
 
-*Specifies the decision-making context in which the model will be used. Important components include the decision maker and stakeholders (including experts) and their view on: i) the nature of the problem or decision addressed and how the scope of the modelling tool fits within the (broader) context (i.e. model purpose; ii) the relevant spatial and temporal scales relevant to the decision context; iii) specified desired outputs; iv) role and inclusion in model development and testing; v) whether they forsee unnacceptable outcomes that need to be represented in the model (i.e. as constraints), and; vi) what future scenarios does the model need to account for (noting this may be revised later).  It should also provide a summary of the domain of applicability of the model, and reasonable extrapolation limits (Grimm et al. 2014).*
+*Specifies the decision-making context in which the model will be used or the intended scope and context of conclusions. Important components include the decision maker and stakeholders (including experts) and their view on: i) the nature of the problem or decision addressed and how the scope of the modelling tool fits within the (broader) context (i.e. model purpose; ii) the spatial and temporal scales relevant to the decision context; iii) specified desired outputs; iv) role and inclusion in model development and testing; v) whether they forsee unnacceptable outcomes that need to be represented in the model (i.e. as constraints), and; vi) what future scenarios does the model need to account for (noting this may be revised later).  It should also provide a summary of the domain of applicability of the model, and reasonable extrapolation limits (Grimm et al. 2014).*
 
 ## 1.1 Model Purpose
 
-*Defining the purpose of the model is critical because the model purpose influences choices at later stages of model development [@Jakeman:2006ii]. Common model purposes in ecology include: gaining a better qualitative understanding of the target system, knowledge synthesis and review, and providing guidance for management and decision-making [@Jakeman:2006ii] (could also see Addison paper on the use of models). Note that modelling objectives are distinct from the analytical objectives of the model.*
+*Defining the purpose of the model is critical because the model purpose influences choices at later stages of model development [@Jakeman:2006ii]. Common model purposes in ecology include: gaining a better qualitative understanding of the target system, synthesising and reviewing knowledge, and providing guidance for management and decision-making [@Jakeman:2006ii] (could also see Addison paper on the use of models). Note that modelling objectives are distinct from the analytical objectives of the model.*
 
 ### 1.1.1 Define model purpose and problem context
 
@@ -39,15 +40,21 @@ A static document for this type of process doesn't really make sense. I propose 
 
 ## 1.2 Specify modelling context	
 
-*The scope of the model, including temporal and spatial resolutions are defined here [@Mahmoud2009], and any limitations on model development analysis and flexibility should be outlined here [@Jakeman:2006ii]. Note that the modelling context is different from the problem context.*
+*The scope of the model, including temporal and spatial resolutions are defined here [@Mahmoud2009], and any limitations on model development analysis and flexibility should be outlined here [@Jakeman:2006ii]. Note that the modelling context is different from the problem context which are described in 1.3.1.*
 
 ### 1.2.1 Identify model interest group
 
 *Identify interest groups in the modelling context. This includes clients, and end-users of the model. Who is the model for, who is involved in formulating the model? Who needs buy in? Describe the decision-making context in which the model will be used.*
 
+***HF Comment: this is lovely, concise and informative***
+
 ### 1.2.2 Model Scope and Scale
 
-*Determine the temporal and spatial scope of the model. Where is the boundary of the modelled system? Everything beyond the boundary and not crossing it is to be ignored within the domain of the model, and everything crossing the boundary is to be treated as external forcing (known/unknown), or else as model outputs (observed, or not, Jakeman et al. 2006).The choice of a model's boundaries is closely linked to the choice of how finely to aggregate the behaviour within the model (Jakeman et al., 2006) - what is the intended scale and resolution of the model (temporal, spatial or otherwise)? Explain how any key concepts or terms within problem or decision-making contexts, such as regulatory terms, will be operationalised and defined in a biologically meaningful way to answer the research question appropriately? (Should this last step go here or within define conceptual framework?). What is the intended domain of applicability of the model, what is the extent of acceptable extrapolations (Grimm)? This is relevant to model transferability... (similar to a COG statement..)* 
+*Determine the temporal and spatial scope of the model. Where is the boundary of the modelled system? Everything outside beyond the boundary and not crossing it is to be ignored within the domain of the model, and everything crossing the boundary is to be treated as external forcing (known/unknown), or else as model outputs (observed, or not, Jakeman et al. 2006) ***HF comment I dont understand the preceeding sentence, the concept of boundaries of the model is foreign to me. Also, is this question more to do with describing the scope and limitations of the data rather then the model?***. The choice of a model's boundaries is closely linked to the choice of how finely to aggregate the behaviour within the model (Jakeman et al., 2006) - what is the intended scale and resolution of the model (temporal, spatial or otherwise)? 
+
+Explain how any key concepts or terms within problem or decision-making contexts, such as regulatory terms, will be operationalised and defined in a biologically meaningful way to answer the research question appropriately? (Should this last step go here or within define conceptual framework?. ***HF comment. I think it belongs with the conceptual framework***). 
+
+What is the intended domain of applicability of the model, what is the extent of acceptable extrapolations (Grimm)? This is relevant to model transferability... (similar to a COG statement..)* 
 A comment:This section feels a bit too big and confusing from my perspective and I do think you might need to move some of it to a different section to reduce the risk of misinterpretation. I'm just thinking about how I might fill this out for an imagined study. The literal boundaries of the study are usually straightforward, but the theoretic boundaries are a different and also big thing to try to conceptualise in one section. You could have a section for the spatial/temporal boundaries of the study, and another section on how far the results can be extrapolated based on the study design. This makes sense to me in how I design experiments, if I have too many confounding variables and not enough spatial and environmental replication then I'm less likely to make any broad claims. However, if I have controlled or experimentally manipulated factors then I feel safer making bigger generalisations about results.
 
 
@@ -55,9 +62,9 @@ A comment:This section feels a bit too big and confusing from my perspective and
 
 *Time-frame - When must the model by completed, e.g. to help make a decision?*
 
-*What effort and resources are available for both developing the model and operating the model?*
+*What effort and resources are available for both developing the model and operating the model?* ***HF comment; as written this might be slightly confronting because you could interpret this to include writing explictly about budget constraints which might be confidential. Maybe this could be alleviated with with an example?***
 
-*What degree of flexibility is required from the model? Might the model need to be quickly reconfigured to explore new scenarios or problems proposed by clients / managers / model-users?*
+*What degree of flexibility is required from the model? Might the model need to be quickly reconfigured to explore new scenarios or problems proposed by clients / managers / model-users?* ***HF comment: love the inclusion of this question***
 
 ## 1.3.1 Explain analytical objectives (MAKE THIS A SEPARATE SECTION WHICH INCLUDES PERF MEASURES)
 
